tests/fixtures/invalid/app/invalid-helper.php
<?php

echo config('app.invalid_key');
